--- a/css/style.css
+++ b/css/style.css
@@ -12,16 +12,20 @@ button {
 }
 
 .app {
+  margin: 50px auto;
   overflow: hidden;
   width: 100%;
   min-height: 100vh;
   display: flex;
+  flex-wrap: wrap;
   justify-content: center;
-  align-items: center;
+  align-items: flex-start;
+  gap: 10px;
 }
 
 .inner {
-  width: 650px;
+  width: 670px;
+  margin: 0 10px;
   background: rgba(129, 0, 241, 0.2);
   display: flex;
   justify-content: space-between;
@@ -36,10 +40,11 @@ button {
   height: 60px;
   background: rgb(78, 78, 78);
   box-shadow: inset 5px 5px 5px rgba(255, 255, 255, 0.3), inset -5px -5px 5px rgba(0, 0, 0, 0.3);
-  border-radius: 3px;
+  border-radius: 5px;
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-grow: 1;
   cursor: pointer;
   transition: 0.2s;
 }
@@ -75,4 +80,22 @@ button {
 }
 .completed::before {
   transform: rotate(-45deg);
+}
+
+.btn {
+  padding: 10px 15px;
+  border: none;
+  border-radius: 3px;
+  cursor: pointer;
+  outline: none;
+}
+.btn__reset {
+  align-self: start;
+  font-size: 1.2em;
+  background-image: linear-gradient(13deg, rgba(255, 54, 71, 0.5), rgba(92, 21, 36, 0.5));
+  box-shadow: 3px 3px 5px rgba(255, 255, 255, 0.2), -3px -3px 5px rgba(0, 0, 0, 0.2);
+  transition: 0.4s;
+}
+.btn__reset:hover {
+  color: beige;
 }
